--- a/Homemade_Cakes/src/app/page-layout/page-layout.component.html
+++ b/Homemade_Cakes/src/app/page-layout/page-layout.component.html
@@ -6,7 +6,7 @@
   class="text-menu"
   target="_blank"
   rel="noopener"
-  (click)="click(4)"
+  (click)="click('4')"
 >
   Số học
 </span>
@@ -14,7 +14,7 @@
     class="text-menu"
     target="_blank"
     rel="noopener"
-    (click)="click(1)"
+    (click)="click('1')"
   >
     Liên hệ
   </span>
@@ -22,7 +22,7 @@
     class="text-menu"
     target="_blank"
     rel="noopener"
-    (click)="click(2)"
+    (click)="click('2')"
   >
     Giỏ hàng
   </span>
@@ -31,7 +31,7 @@
     class="text-menu"
     target="_blank"
     rel="noopener"
-    (click)="click(3)"
+    (click)="click('3')"
   >
   Log in 
   </span>
@@ -61,7 +61,7 @@ Log out
           class="tm-site-name tm-handwriting-font text-center"
           style="color: red; font-size: 40px; font-family: 'Dancing'"
         >
-          Caker Homemade
+          Cake Homemade
         </p>
       </h5>
     </marquee>
