--- a/Homemade_Cakes/src/styles.css
+++ b/Homemade_Cakes/src/styles.css
@@ -1,5 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 /* css .carousel-*/
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-calendars/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-dropdowns/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-notifications/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-angular-grids/styles/material.css';
+
 .slick-prev:before,
 .slick-next:before {
   color: black !important;
@@ -17,3 +28,4 @@
     margin-right: 10px !important;
   }
 }
+
