--- a/Homemade_Cakes/src/app/modules/manager-number/manager-number.component.html
+++ b/Homemade_Cakes/src/app/modules/manager-number/manager-number.component.html
@@ -1,1 +1,84 @@
-<p>manager-number works!</p>
+<div class="mb-5">
+  <div style="float: right">
+    <button>Thêm</button>
+  </div>
+</div>
+<div class="content-layout">
+  <ejs-grid
+    #grid
+    id="grid"
+    style="padding: 10px 10px"
+    [dataSource]="data"
+    [allowPaging]="true"
+    [allowSorting]="true"
+    [allowFiltering]="true"
+    [pageSettings]="pageSettings"
+  >
+    <e-columns>
+      <e-column
+        field="OrderID"
+        headerText="Order ID"
+        textAlign="Right"
+        width="90"
+      ></e-column>
+      <e-column
+        field="CustomerID"
+        headerText="Customer ID"
+        width="120"
+      ></e-column>
+      <e-column
+        field="Freight"
+        headerText="Freight"
+        textAlign="Right"
+        format="C2"
+        width="90"
+      ></e-column>
+      <e-column
+        field="OrderDate"
+        headerText="Order Date"
+        textAlign="Right"
+        format="yMd"
+        width="120"
+      ></e-column>
+    </e-columns>
+  </ejs-grid>
+  <!-- <ejs-grid [dataSource]='data'>
+    <e-columns>
+        <e-column field='OrderID' headerText='Order ID' textAlign='Right' width=90></e-column>
+        <e-column field='CustomerID' headerText='Customer ID' width=120></e-column>
+        <e-column field='Freight' headerText='Freight' textAlign='Right' format='C2' width=90></e-column>
+        <e-column field='OrderDate' headerText='Order Date' textAlign='Right' format='yMd' width=120></e-column>
+    </e-columns>
+    </ejs-grid>  -->
+  <!-- <div class="control-section">
+    <div style="margin-bottom: 10px;">
+        <label style="display: inline-block; font-size: 14px;">Feed Delay(ms):</label>
+        <ejs-numerictextbox #feeddelay format="N0" value="1000" min="10" max="5000" step="1" width="150px"
+            style="margin-left: 7px;" aria-label="Free delay"></ejs-numerictextbox>
+        <button #update id="update" ejs-button (click)="updateClick($event)" style="margin-left: 10px;">
+            Start Data Update
+        </button>
+        <button #clear id="clear" ejs-button (click)="clearClick($event)" style="margin-left: 10px;">
+            Stop Data Update
+        </button>
+    </div>
+    <ejs-grid #livestream id="livestream" [enableVirtualization]="true" [enableVirtualMaskRow]="false"
+        [enableHover]="false" [dataSource]="data" (queryCellInfo)="queryCellInfoEvent($event)" rowHeight="38"
+        height="500" [allowSelection]="false" (destroyed)="destroyClear($event)">
+        <e-columns>
+            <e-column field="id" headerText="ID" width="140" [isPrimaryKey]="true" [visible]="false"></e-column>
+            <e-column field="CountryCode" headerText="Ticker" width="70"></e-column>
+            <e-column field="Change" headerText="Change % 1D" width="100" format="N0" textAlign="Right"></e-column>
+            <e-column field="Net" headerText="Net" width="100" format="C2" type="number" textAlign="Right"></e-column>
+            <e-column field="Rating" width="150" headerText="Technical Rating 1D"></e-column>
+            <e-column field="NetIncome" headerText="Net Income" width="150" format="C2" type="number"
+                textAlign="Right"></e-column>
+            <e-column field="Sector" width="160" headerText="Sector"> </e-column>
+            <e-column field="EmployeeCount" width="130" headerText="Employee Count" textAlign="Right"></e-column>
+        </e-columns>
+    </ejs-grid>
+  
+  
+  
+  </div> -->
+</div>
