--- a/Homemade_Cakes/src/app/service/login/login.component.html
+++ b/Homemade_Cakes/src/app/service/login/login.component.html
@@ -352,7 +352,7 @@ autocomplete="off"
     required
     minlength="256"
   />
-		<p class="helper helper1">Email đăng nhập</p>
+		<!-- <p class="helper helper1">Email đăng nhập</p> -->
 		<span class="indicator"></span>
 	</div>
 	<div class="inputGroup inputGroup2">
@@ -371,3 +371,5 @@ autocomplete="off"
 		<button id="login">Log in</button>
 	</div>	
 </form>
+<!-- noti -->
+<app-notification #noti></app-notification> 
