--- a/Homemade_Cakes/src/app/page-layout/page-layout.component.css
+++ b/Homemade_Cakes/src/app/page-layout/page-layout.component.css
@@ -312,3 +312,62 @@ cursor: pointer;
 }
 
 /* end css */
+
+
+/* Chat */
+.chat-popup {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 300px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-header {
+  background-color: #007bff;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.chat-header .close-btn {
+  cursor: pointer;
+}
+
+.chat-body {
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+}
+
+.messages {
+  flex: 1;
+  overflow-y: auto;
+  padding: 10px;
+  border-top: 1px solid #ccc;
+}
+
+.message {
+  background-color: #f1f1f1;
+  margin-bottom: 10px;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+input[type='text'] {
+  border: none;
+  border-top: 1px solid #ccc;
+  padding: 10px;
+  font-size: 14px;
+  outline: none;
+}
+
